adding damac 2 isalnds

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -35,7 +35,8 @@
     "nakheel": "نخيل",
     "arada": "أرادَ",
     "omniyat": "أومنيات",
-    "aziziDevelopments": "عزيزي للتطوير العقاري"
+    "aziziDevelopments": "عزيزي للتطوير العقاري",
+    "damacProperties": "داماك العقارية"
   },
   "projectNames": {
     "sobhaSkyParks": "شوبا سكاي باركس",
@@ -48,7 +49,8 @@
     "palmCentralNakheel": "بالم سنترال - نخيل",
     "aradaMassar3": "مسار 3",
     "luminaAlta": "لومينا ألتا",
-    "aziziRivieraRetails": "محلات عزيزي ريفييرا التجارية"
+    "aziziRivieraRetails": "محلات عزيزي ريفييرا التجارية",
+    "damacIslands2": "داماك آيلاندز 2"
   },
   "Header": {
     "title": "محمد قضماني",
