--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -35,7 +35,8 @@
     "nakheel": "Nakheel",
     "arada": "Arada",
     "omniyat": "Omniyat",
-    "aziziDevelopments": "Azizi Developments"
+    "aziziDevelopments": "Azizi Developments",
+    "damacProperties": "DAMAC Properties"
   },
   "projectNames": {
     "sobhaSkyParks": "Sobha SkyParks",
@@ -48,7 +49,8 @@
     "palmCentralNakheel": "Palm Central – Nakheel",
     "aradaMassar3": "Massar 3",
     "luminaAlta": "Lumena Alta",
-    "aziziRivieraRetails": "Azizi Riviera – Retails"
+    "aziziRivieraRetails": "Azizi Riviera – Retails",
+    "damacIslands2": "DAMAC Islands 2"
   },
   "Header": {
     "title": "MOHAMAD KODMANE",
