continuing translation of homepage

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -12,8 +12,8 @@
     "penthouses": "بنتهاوس فاخرة بإطلالات ومرافق راقية"
   },
   "developers": {
-    "sobhaRealty": "شركة شوبا العقارية",
-    "arada": "إعمار أَرادا",
+    "sobhaRealty": "شوبا العقارية",
+    "arada": "أرادا للتطوير العقاري",
     "damacProperties": "داماك العقارية",
     "aziziDevelopments": "عزيزي للتطوير العقاري",
     "omniyat": "أمنيات"
@@ -24,8 +24,8 @@
     "sobhaCentral": "شوبا سنترال",
     "sobhaAquamont": "شوبا أكوامونت",
     "sobhaHartland2Villas": "فلل شوبا هارتلاند 2",
-    "sobhaAlSinniyyahIsland": "جزيرة شوبا السينية",
-    "aradaMassar3": "أرادا مسار 3",
+    "sobhaAlSinniyyahIsland": "جزيرة السينية",
+    "aradaMassar3": "مسار",
     "damacIslands2": "جزر داماك 2",
     "luminaAlta": "لومينا ألتا",
     "aziziRivieraRetails": "عزيزي ريفييرا ريتيل",
@@ -103,6 +103,7 @@
   },
   "homeSlider": {
     "mainTitle": "اكتشف عقاراتنا الفاخرة في الإمارات",
+    "discoverButton": "اكتشف",
     "exploreButton": "استكشف الكل",
     "ariaLabels": {
       "previousSlide": "الشريحة السابقة",
@@ -183,6 +184,133 @@
         "category": "بنتهاوس",
         "location": "دبي هاربور، دبي"
       }
+    }
+  },
+  "artOfDetail": {
+    "sloganPre": "حيث",
+    "sloganMain": "يمتلك نخبة الـ 1٪",
+    "companyLine": "محمد قضماني للوساطة العقارية",
+    "description": "في محمد قضماني للوساطة العقارية، ندرك أن التميّز الحقيقي يبدأ من أدق التفاصيل وفنّ الحرفية الرفيعة. نلتزم بالكمال في كل لمسة، فلا نصنع مجرد منازل، بل تجارب معيشية متكاملة تُصمَّم بعناية ليُؤخَذ كل تفصيل في الحسبان.",
+    "discoverMore": "اكتشف المزيد",
+    "ownerAlt": "صورة لمحمد قضماني"
+  },
+  "pillarsSection": {
+    "heading": "من الفكرة إلى التسليم: ركائز استثمارنا",
+
+    "pillar1": {
+      "title": "لماذا تستثمر في دبي؟",
+      "intro": "تُعد دبي واحدة من أقوى مدن الاستثمار في العالم، وتوفر بيئة مثالية لنمو ثروتك العقارية واستقرارك المالي على المدى الطويل.",
+      "point1": "عوائد استثمارية مرتفعة مقارنة بالأسواق العالمية.",
+      "point2": "بيئة اقتصادية آمنة ومتقدمة ومدعومة ببنية تشريعية واضحة.",
+      "point3": "لا توجد ضرائب على الدخل أو أرباح العقار.",
+      "point4": "إمكانية الحصول على الإقامة الذهبية عند الاستثمار بمليوني درهم إماراتي أو أكثر.",
+      "point5": "بنية تحتية عالمية المستوى وخدمات متكاملة.",
+      "point6": "طلب عالمي متزايد على العقارات في دبي من مستثمرين ومستخدمين نهائيين.",
+      "point7": "سهولة تملّك العقار للأجانب مع إجراءات ميسّرة وواضحة."
+    },
+
+    "pillar2": {
+      "title": "ما هو الملف العقاري (محفظة عقارية)؟",
+      "intro": "امتلاك أكثر من عقار واحد – جاهز وتحت الإنشاء – بهدف بناء ثروة عقارية قوية ومتنوعة ومتوازنة.",
+      "point1": "تنويع مصادر الدخل من خلال عدة عقارات بدلاً من الاعتماد على أصل واحد.",
+      "point2": "تقليل المخاطر عن طريق توزيع الاستثمار على مشاريع ومناطق مختلفة.",
+      "point3": "تعظيم العائد من خلال الجمع بين دخل الإيجار ونمو قيمة العقار على المدى الطويل.",
+      "point4": "نقوم بإدارة المحفظة العقارية بالكامل نيابةً عنك، ليكبر استثمارك العقاري بأمان وسلاسة."
+    },
+
+    "pillar3": {
+      "title": "ما هو الاستثمار عقارات قيد الانشاء في دبي؟",
+      "intro": "شراء عقار في مراحله الأولى، قبل أو أثناء البناء، مع خطط سداد مرنة تُدفع مباشرة للمطور على أقساط مريحة.",
+      "point1": "سعر شراء أقل مقارنة بالعقارات الجاهزة في نفس المنطقة.",
+      "point2": "إمكانية تحقيق ربح عند التسليم مع ارتفاع قيمة العقار بمرور الوقت.",
+      "point3": "مرونة عالية في الدفع مع أقساط مريحة ودون الحاجة غالباً إلى تمويل بنكي."
+    }
+  },
+  "pressReleases": {
+    "heading": "البيانات الصحفية",
+    "viewAll": "عرض الكل",
+    "publishedLabel": "تاريخ النشر",
+    "aria": {
+      "prev": "البيان السابق",
+      "next": "البيان التالي"
+    }
+  },
+  "footer": {
+    "brand": {
+      "logoBar": "محمد قضماني للوساطة العقارية",
+      "corporateName": "محمد قضماني",
+      "corporateTitle": "سمسار عقاري",
+      "legal": {
+        "tradeLicense": "رخصة تجارية: 1192580",
+        "advertisingPermit": "تصريح إعلاني: 139532",
+        "reraCertified": "معتمد من دائرة الأراضي والأملاك"
+      }
+    },
+    "headers": {
+      "apartments": "الشقق",
+      "villas": "الفلل",
+      "penthouses": "البنتهاوس",
+      "communities": "المجتمعات",
+      "mediaCenter": "المركز الإعلامي",
+      "aboutUs": "من نحن",
+      "contact": "التواصل"
+    },
+    "projects": {
+      "apartments": {
+        "sobhaSkyParks": "شوبا سكاي باركس",
+        "sobhaAquaCrest": "شوبا أكوا كريست",
+        "sobhaCentral": "شوبا سنترال",
+        "sobhaAquamont": "شوبا أكوامونت"
+      },
+      "villas": {
+        "sobhaHartlandVillas": "فلل شوبا هارتلاند",
+        "sobhaAlSinniyyahIsland": "جزيرة السينية من شوبا",
+        "masaarByArada": "مسار من أرادا",
+        "damacIslands2": "جزر داماك 2"
+      },
+      "penthouses": {
+        "sobhaSeaHavenPenthouse": "بنتهاوس شوبا سي هافن"
+      }
+    },
+    "communities": {
+      "sobhaSkyParks": "شوبا سكاي باركس",
+      "sobhaCentral": "شوبا سنترال",
+      "sobhaHartland": "شوبا هارتلاند",
+      "alSinniyyahIsland": "جزيرة السينية",
+      "masaarByArada": "مسار من أرادا",
+      "damacIslands2": "جزر داماك 2"
+    },
+    "mediaCenter": {
+      "mediaCenter": "المركز الإعلامي",
+      "blogs": "المدونة",
+      "reports": "التقارير"
+    },
+    "aboutUs": {
+      "aboutMohamadKodmane": "عن محمد قضماني",
+      "legacyExperience": "الإرث والخبرة",
+      "thoughtfulAdvice": "استشارات مدروسة"
+    },
+    "contact": {
+      "contactUs": "اتصل بنا",
+      "channelPartner": "شريك القناة",
+      "ourPresence": "تواجدنا",
+      "faq": "الأسئلة الشائعة"
+    },
+    "address": {
+      "title": "المقر الرئيسي",
+      "line1": "الطابق 22، برج 22 كورت",
+      "line2": "مكتب B08، الخليج التجاري",
+      "line3": "دبي، الإمارات العربية المتحدة",
+      "poBox": "ص.ب 446097"
+    },
+    "contactBlock": {
+      "title": "استشارة خاصة",
+      "directLabel": "مباشر",
+      "officeLabel": "المكتب",
+      "emailLabel": "البريد الإلكتروني"
+    },
+    "meta": {
+      "allRightsReserved": "جميع الحقوق محفوظة."
     }
   }
 }
